--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JSON Dummy Data</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+    </style>
 </head>
 <body>
-<ul>
+<h1>JSON Dummy data files</h1>
+<h2>Formatted versions</h2>
+    <ul>
      <li><a href="411k.json">411 KB</a></li>
      <li><a href="1.8MB.json">1.8 MB</a></li>
      <li><a href="2.3MB.json">2.3 MB</a></li>
@@ -19,6 +26,20 @@
      <li><a href="137k.json">137 KB</a></li>
      <li><a href="176k.json">176 KB</a></li>
      <li><a href="411k.json">411 KB</a></li>
+</ul>
+<h2>Minified versions</h2>
+<ul>
+     <li><a href="411k-min.json">411 KB - minified</a></li>
+     <li><a href="1.8MB-min.json">1.8 MB - minified</a></li>
+     <li><a href="2.3MB-min.json">2.3 MB - minified</a></li>
+     <li><a href="5.9MB-min.json">5.9 MB - minified</a></li>
+     <li><a href="6k-min.json">6 KB - minified</a></li>
+     <li><a href="6MB-min.json">6 MB - minified</a></li>
+     <li><a href="11.7MB-min.json">11.7 MB - minified</a></li>
+     <li><a href="23k-min.json">23 KB - minified</a></li>
+     <li><a href="137k-min.json">137 KB - minified</a></li>
+     <li><a href="176k-min.json">176 KB - minified</a></li>
+     <li><a href="411k-min.json">411 KB - minified</a></li>
 </ul>   
 
 </body>
