--- a/index.html
+++ b/index.html
@@ -27,15 +27,33 @@
         }
         h1 {
             font-size: 1.1em;
+            border-bottom: 1px solid darkolivegreen;
+            padding-bottom: 5px;
         }
         h2 {
             font-size: 1em;
+            font-weight: normal;
+            line-height: .9;
+            border-bottom: 1px solid darkolivegreen;
+            padding-bottom: 5px;
         }
         ul {
             font-size: .9em;
             list-style: none;
             margin: 0;
             padding: 0;
+        }
+        a {
+            display: block;
+            color: darkolivegreen;
+            padding: 2px 5px;
+            transition: 300ms;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        a:hover {
+            background: darkolivegreen;
+            color: #fff;
         }
 
     </style>
